settings for github page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homeage":"http://ryanww86.github.io/NorthAmericanAluminum",
+  "homeage":"https://ryanww86.github.io/NorthAmericanAluminum",
   "name": "react-website-yt-1",
   "version": "0.1.0",
   "private": true,
