--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "predeploy":"npm run build",
     "deploy":"gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=. react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
